--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: android
-cache:
-  directories:
-    - $HOME/.m2
 android:
   components:
     # Uncomment the lines below if you want to
@@ -14,3 +11,12 @@ android:
 
     # The SDK version used to compile your project
     - android-27
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.m2
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
