--- a/android-demo/build.gradle
+++ b/android-demo/build.gradle
@@ -39,3 +39,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
+
+sourceSets {
+    main {
+        // disable NDK build
+        jni.srcDirs = []
+    }
+}
